--- a/package.json
+++ b/package.json
@@ -10,5 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "jasmine": "^2.5.2"
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
   }
 }
