--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node.js API supplying eldritch-decks data",
   "main": "main.js",
   "scripts": {
-    "test": "./node_modules/.bin/jasmine-node spec",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-register --require babel-polyfill",
     "build": "./node_modules/.bin/babel src -d lib",
     "build-watch": "./node_modules/.bin/babel src -d lib --watch"
   },
@@ -12,10 +12,10 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.18.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
-    "jasmine-core": "^2.5.2",
-    "jasmine-node": "^1.14.5",
-    "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2"
+    "babel-register": "^6.18.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2"
   }
 }
