--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "mocha": "^3.1.2"
+  },
+  "dependencies": {
+    "JSONStream": "^1.2.1"
   }
 }
